[fix][dingo-executor] Fix vector search using covering index fields issue